@@ -16,6 +16,7 @@ client.waypoint = [accent][[{0}][] to place waypoint
 client.stoppath = [accent][[{0}][] to stop following path
 client.toggleunits = [accent][[{0}][] to toggle unit visibility
 client.toggleturrets = [accent][{0}][] to toggle turret visibility
+client.toggleoverdrives = [accent]SHIFT + [{0}][] to toggle overdrive visibility
 client.toggleblocks = [accent][{0}][] to toggle block visibility
 client.stopsendbuildplans = [accent][[{0}][] to stop dispatching build plans
 client.sendbuildplans = [accent][[{0}][] to start dispatching build plans
